added personal background

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     <!-- WORK FROM INSIDE THIS CONTAINER-->
   </div>
   <img src="resources/images/66232357772__726D93B1-4D39-4DB8-808E-F3476F10B0FD (1).HEIC">
+
+  <div class="section" id="personalBackground">
+    <h2>
+      Personal Background
+    </h2>
+    <p>My name is Eddie Greenlee and I'm a guy who likes working with technology and playing games. I also like sports,
+      working out, movies, and Canes. I'm a senior at UC and am always curious about learning new things. Growing up I
+      got into computers when I was about 13 and self-taught myself for the most part how to use them and how they
+      functioned. Super pumped for Overwatch 2 this october!</p>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
