--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       functioned. Super pumped for Overwatch 2 this october!</p>
   </div>
 
+  <div class="section" id="experience">
+    <ol>
+      <li>intern at Speedway - data analyst</li>
+      <li>QA for TQL - awesome place to work</li>
+    </ol>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
