--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     </ol>
   </div>
 
+  <div class="section" id="programmingLanguages">
+    <ol>
+      <li>SQL</li>
+      <li>Java/Javascript</li>
+      <li>C#</li>
+      <li>C++</li>
+      <li>HTML</li>
+    </ol>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
