--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
     </ol>
   </div>
 
+  <div class="section" id="achievements">
+    <ul>
+      <li>I scored my first hole-in-one in disc golf this week which was sick.</li>
+      <li>I got offered a position at TQL post graduation if I was interested, also sick.</li>
+      <li>My weight-loss journey is going well, having lost 25 lbs since starting 7 months ago.</li>
+    </ul>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
