--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     </ul>
   </div>
 
+  <div class="section" id="games">
+    <p>Super excited for Overwatch 2 since the first was amazing especially with friends. Lots of new games coming out
+      but currently playing League of Legends, Black Ops zombies, some rogue-likes like Enter the Gungeon, Hunt
+      Showdown, Rocket League, CSGO, and more. I just like playing a variety of games.</p>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
