--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <h1>
-      Eddie
+      Eddie Greenlee
     </h1>
 
     <!-- WORK FROM INSIDE THIS CONTAINER-->
