added HTML titles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   </div>
 
   <div class="section" id="experience">
+    <h2>
+      Experience
+    </h2>
     <ol>
       <li>intern at Speedway - data analyst</li>
       <li>QA for TQL - awesome place to work</li>
@@ -41,6 +44,9 @@
   </div>
 
   <div class="section" id="programmingLanguages">
+    <h2>
+      Programming Languages
+    </h2>
     <ol>
       <li>SQL</li>
       <li>Java/Javascript</li>
@@ -51,6 +57,9 @@
   </div>
 
   <div class="section" id="achievements">
+    <h2>
+      Achievements
+    </h2>
     <ul>
       <li>I scored my first hole-in-one in disc golf this week which was sick.</li>
       <li>I got offered a position at TQL post graduation if I was interested, also sick.</li>
@@ -59,6 +68,9 @@
   </div>
 
   <div class="section" id="games">
+    <h2>
+      Games
+    </h2>
     <p>Super excited for Overwatch 2 since the first was amazing especially with friends. Lots of new games coming out
       but currently playing League of Legends, Black Ops zombies, some rogue-likes like Enter the Gungeon, Hunt
       Showdown, Rocket League, CSGO, and more. I just like playing a variety of games.</p>
